--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ defaultContentLanguage = "fr"
 
 [params]
 address = "Somewhere in Nevada, XX000"
-email = "loan.XXX@ZZZ.fr"
+email = "loan.XXX@ZZZ.fraa"
 favicon = "/favicon.ico"
 firstName = "Loan"
 lastName = "YYY"
